VERSION 1.3:

 - Re-licensed under the Sunflower Seed License, version 1
 - Added comment lines to allow the Sunflower Seed License notice to appear in
   the level file.
 - Minor updates to documentation to more accurately reflect the game as it
   currently exists.
 - Added in functionality to dynamically resize the window according to user
   specifications both in the command line and as a configuration option.
 - The old method of displaying messages by having physical letters float
   around the level has been officially removed from the game entirely, and is
   no longer supported.  Good riddance.
 - Implemented teleporters.
 - Implemented a game over screen which appears upon completion of the game.

VERSION 1.002:

 - One of the doors in level 6 now opens diagonally in order to preserve the
   original challenge of the level.
 - Finishing the last level no longer raises a SystemExit; no further
   revisions to the code should use a SystemExit for anything other than a
   bug kill.
 - Ending the mainloop now displays a "quit message" (with the exception of
   end-of-games caused by a SystemExit).
 - New "bat" enemy added.
 - Game's default display size has been changed to 960x540
 - The game now has a new in-game message system, making the physical letters
   that used to float around the levels obsolete
 - New training levels to smooth the learning curve for new players
 - The "You are dead" message now displays in-game rather than in the terminal

Changes between Orange Guy's Quest version 1.0 and 1.1:

 - WINDOWS option added to allow users to define whether they want to use a
   backslash for their system.
 - Image sprites are now loaded into memory rather than being loaded once for
   every single time they are needed.
 - Image sprites are not loaded if they are not needed (user chooses the
   'Ancient' graphics setting)
 - The game no longer attempts to randomize enemy sprites, as they were not