@@ -1,3 +1,10 @@
+DEFINITIVE EDITION:
+
+ - Moved all of the old levels (except for test levels) into a single file,
+   old-levels.txt
+ - Created a set of "introductory levels" which can be accessed via the
+   command line using -?, --help, or --intro
+
 VERSION 1.3:
 
  - Re-licensed under the Sunflower Seed License, version 1
